<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:behavior_overlapTop="0dp"
    android:background="@color/background">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:showIn="@layout/activity_main" tools:context=".MainActivity"
        android:background="#ffffff">



            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/tigger"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/tigger" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spotify"
                android:id="@+id/button_spotify"
                android:onClick="onButtonClicked"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:background="#f5dd64"
                android:layout_marginBottom="10dp" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/superduo"
            android:id="@+id/button_superduo"
            android:onClick="onButtonClicked"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:background="#edc643"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buildbigger"
            android:id="@+id/button_bigger"
            android:onClick="onButtonClicked"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:background="#f09f36"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reader"
            android:id="@+id/button_reader"
            android:onClick="onButtonClicked"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:background="#f6822f"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/button_capstone"
            android:onClick="onButtonClicked"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:background="#f6532f" />

    </LinearLayout>
</ScrollView>